scrollbar fix

--- a/YouTube/public/style.css
+++ b/YouTube/public/style.css
@@ -34739,6 +34739,34 @@ video {
   --scrollbar-thumb: #383838 !important;
 }
 
+.material-icons.md-18 {
+  font-size: 18px;
+}
+
+.material-icons.md-21 {
+  font-size: 21px;
+}
+
+.material-icons.md-24 {
+  font-size: 24px;
+}
+
+.material-icons.md-36 {
+  font-size: 36px;
+}
+
+.material-icons.md-48 {
+  font-size: 48px;
+}
+
+#sidebar {
+  overflow: hidden;
+}
+
+#sidebar:hover {
+  overflow-y: auto;
+}
+
 @media (min-width: 640px){
   .sm\:container{
     width: 100%;
