--- a/YouTube/src/style.css
+++ b/YouTube/src/style.css
@@ -3,3 +3,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.material-icons.md-18 { font-size: 18px; }
+.material-icons.md-21 { font-size: 21px; }
+.material-icons.md-24 { font-size: 24px; }
+.material-icons.md-36 { font-size: 36px; }
+.material-icons.md-48 { font-size: 48px; }
+#sidebar {
+    overflow: hidden;
+}
+#sidebar:hover {
+    overflow-y: auto;
+}
